crates/vlc-http/src/response/tests/snapshots/vlc_http__response__tests__sample_playlist.txt.snap
---
source: vlc-http/src/response/tests/mod.rs
expression: response
---
Response(
  inner: PlaylistInfo(Info(
    items: [
      Item(
        duration_secs: None,
        id: 1580,
        name: "Floaters.mp3",
        url: "file:///path/to/Music/Jimmy%20Fontanez/Floaters.mp3",
      ),
    ],
  )),
)
